feat: add dark theme for qt and gtk

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -3,6 +3,12 @@
 exec-once = bash -c "sleep 2 && hyprpaper"
 exec-once = bash -c "sleep 3 && waybar"
 
+exec = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita-dark"
+exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
+
+env = QT_QPA_PLATFORMTHEME,qt6ct
+env = QT_QPA_PLATFORMTHEME,qt5ct
+
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
